--- a/public_HTTPS/sageUI-New.html
+++ b/public_HTTPS/sageUI-New.html
@@ -287,7 +287,6 @@
 	
 	function resize() {
 		SAGE2DisplayUI.resize();
-		
 		resizeDialogs();
 	}
 	
@@ -301,15 +300,15 @@
 		metadata.style.left = (window.innerWidth/2 *0.6 - 5).toString() + "px";
 		metadata.style.width = (window.innerWidth/2 *0.4 - 7).toString() + "px";
 		metadata.style.height = (window.innerHeight/2 - 48).toString() + "px";
-		var sage2pointer_help = document.getElementById('sage2pointer_help');
-		var sage2pointer_helpAspect = 1264.25/982.255;
-		if(sage2pointer_helpAspect <= windowAspect){
-			sage2pointer_help.height = window.innerHeight/2;
-			sage2pointer_help.width = sage2pointer_help.height * sage2pointer_helpAspect;
+		var sage2pointerHelp = document.getElementById('sage2pointerHelp');
+		var sage2pointerHelpAspect = 1264.25/982.255;
+		if(sage2pointerHelpAspect <= windowAspect){
+			sage2pointerHelp.height = window.innerHeight/2;
+			sage2pointerHelp.width = sage2pointerHelp.height * sage2pointerHelpAspect;
 		}
 		else {
 			sage2pointer_help.width = window.innerWidth/2;
-			sage2pointer_help.height = sage2pointer_help.width / sage2pointer_helpAspect;
+			sage2pointer_help.height = sage2pointerHelp.width / sage2pointerHelpAspect;
 		}
 	}
 	
@@ -345,6 +344,7 @@
 	
 	function pointerClick(event) {
 		var element = event.srcElement;
+		
 		// SAGE2 UI Interaction
 		if(element.id === "sage2UI") {
 			console.log("sage2UI");
@@ -352,67 +352,87 @@
 		
 		// Menu Buttons
 		else if(element.id === "applauncher") {
-			console.log("App Launcher");
+			showDialog('appLauncherDialog');
 		}
 		else if(element.id === "mediabrowser") {
-			console.log("Media Browser");
-			var blackoverlay = document.getElementById('blackoverlay');
-			var mediaBrowser = document.getElementById('mediaBrowser');
-			blackoverlay.style.display = "block";
-			mediaBrowser.style.display = "block";
+			showDialog('mediaBrowserDialog');
 		}
 		else if(element.id === "arrangement") {
-			console.log("Arrangement");
+			showDialog('arrangementDialog');
 		}
 		else if(element.id === "settings") {
-			console.log("Settings");
+			showDialog('settingsDialog');
 		}
 		else if(element.id === "info") {
-			console.log("Info");
+			
 		}
 		else if(element.id === "sharescreen") {
-			console.log("Share Screen");
+			
 		}
 		else if(element.id === "sage2pointer") {
-			console.log("SAGE2 Pointer");
 			interactor.startSAGE2Pointer(element.id);
 		}
 		
-		// Media File Browser
+		
+		// App Launcher Dialog
+		else if (element.id === "appOKBtn") {
+			hideDialog('appLauncherDialog');
+		}
+		else if (element.id === "appCloseBtn") {
+			hideDialog('appLauncherDialog');
+		}
+		else if (element.id === "appDeleteBtn") {
+			if(confirm("Are you sure you want to delete this app?")){
+				hideDialog('appLauncherDialog');
+			}
+		}
+		
+		// Media Browser Dialog
 		else if (element.id === "fileOKBtn") {
-			var blackoverlay = document.getElementById('blackoverlay');
-			var mediaBrowser = document.getElementById('mediaBrowser');
-			blackoverlay.style.display = "none";
-			mediaBrowser.style.display = "none";
+			hideDialog('mediaBrowserDialog');
 		}
 		else if (element.id === "fileCloseBtn") {
-			var blackoverlay = document.getElementById('blackoverlay');
-			var mediaBrowser = document.getElementById('mediaBrowser');
-			blackoverlay.style.display = "none";
-			mediaBrowser.style.display = "none";
+			hideDialog('mediaBrowserDialog');
 		}
 		else if (element.id === "fileDeleteBtn") {
-			var blackoverlay = document.getElementById('blackoverlay');
-			var mediaBrowser = document.getElementById('mediaBrowser');
-			blackoverlay.style.display = "none";
-			mediaBrowser.style.display = "none";
+			if(confirm("Are you sure you want to delete this file?")){
+				hideDialog('mediaBrowserDialog');
+			}
 		}
+		
+		// Arrangement Dialog
+		else if (element.id === "arrangementCloseBtn") {
+			hideDialog('arrangementDialog');
+		}
+		
+		// Settings Dialog
+		else if (element.id === "settingsCloseBtn") {
+			hideDialog('settingsDialog');
+		}
+	}
+	
+	function showDialog(id) {
+		var blackoverlay = document.getElementById('blackoverlay');
+		var dialog = document.getElementById(id);
+		blackoverlay.style.display = "block";
+		dialog.style.display = "block";
+	}
+	
+	function hideDialog(id) {
+		var blackoverlay = document.getElementById('blackoverlay');
+		var dialog = document.getElementById(id);
+		blackoverlay.style.display = "none";
+		dialog.style.display = "none";
 	}
 	
 	function sagePointerEnabled() {
 		// show SAGE2 Pointer dialog
-		var blackoverlay = document.getElementById('blackoverlay');
-		sage2pointer_dialog = document.getElementById('sage2pointer_dialog');
-		blackoverlay.style.display = "block";
-		sage2pointer_dialog.style.display = "block";
+		showDialog('sage2pointerDialog');
 	}
 	
 	function sagePointerDisabled() {
 		// hide SAGE2 Pointer dialog
-		var blackoverlay = document.getElementById('blackoverlay');
-		sage2pointer_dialog = document.getElementById('sage2pointer_dialog');
-		blackoverlay.style.display = "none";
-		sage2pointer_dialog.style.display = "none";
+		hideDialog('sage2pointerDialog');
 	}
 	
 	function reloadIfServerRunning(callback) {
@@ -474,10 +494,24 @@
 	<div class="clear"></div>
 	
 	<!-- transparent black overlay for all dialogs -->
-	<div id="blackoverlay" class="lb_blackoverlay"></div>
+	<div id="blackoverlay"></div>
 	
-	<!-- dialog for the media browser -->
-	<div id="mediaBrowser" class="lb_container">
+	<!-- dialog for the SAGE2 Pointer Help -->
+	<div id="sage2pointerDialog" class="dialog">
+		<img id="sage2pointerHelp" src="images/SAGE2Pointer-help.svg"></img>
+	</div>
+	
+	<!-- dialog for the App Launcher-->
+	<div id="appLauncherDialog" class="dialog">
+		<div id="appButtons">
+			<span id="appOKBtn" class="button">OK</span>
+			<span id="appCloseBtn" class="button">Close</span>
+			<span id="appDeleteBtn" class="button">Delete</span>
+		</div>
+	</div>
+	
+	<!-- dialog for the Media Browser -->
+	<div id="mediaBrowserDialog" class="dialog">
 		<div id="fileTreeList" class="css-treeview">
 			<ul id="fileListElems">
 				<li>
@@ -513,9 +547,28 @@
 		</div>
 	</div>
 	
-	<!-- dialog for the SAGE2 Pointer Help -->
-	<div id="sage2pointer_dialog" class="lb_container">
-		<img id="sage2pointer_help" src="images/SAGE2Pointer-help.svg"></img>
+	<!-- dialog for the Arrangement-->
+	<div id="arrangementDialog" class="dialog">
+		<div id="arrangementItems">
+			<p>Test 01</p>
+			<p>Test 02</p>
+			<p>Test 03</p>
+		</div>
+		<div id="arrangementButtons">
+			<span id="arrangementCloseBtn" class="button">Close</span>
+		</div>
+	</div>
+	
+	<!-- dialog for the Settings-->
+	<div id="settingsDialog" class="dialog">
+		<div id="settingsItems">
+			<p>Test 01</p>
+			<p>Test 02</p>
+			<p>Test 03</p>
+		</div>
+		<div id="settingsButtons">
+			<span id="settingsCloseBtn" class="button">Close</span>
+		</div>
 	</div>
 </body>
 </html>
